Reorganized file naming to make it clearer which plugins files belong to. Also cleaned up the SQL to use the new Utilities SQL querying API.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
-main: me.Tiernanator.Permissions.Main
+main: me.Tiernanator.Permissions.PermissionsMain
 version: 4.0
 name: Permissions
 description: A Plugin that handles player Permissions.
